Delete runepool aggregates
