# internal/api/api.go
@@ -68,7 +68,6 @@ func InitHandler(nodeURL string) {
 	addMeasured(router, "/v2/history/swaps", jsonSwapHistory)
 	addMeasured(router, "/v2/history/depths/:pool", jsonDepths)
 	addMeasured(router, "/v2/history/savers/:pool", jsonSaversDepths)
-	addMeasured(router, "/v2/history/runepool", jsonRUNEPool)
 	addMeasured(router, "/v2/history/earnings", jsonEarningsHistory)
 	addMeasured(router, "/v2/history/liquidity_changes", jsonLiquidityHistory)
 	addMeasured(router, "/v2/history/tvl", jsonTVLHistory)
@@ -84,7 +83,6 @@ func InitHandler(nodeURL string) {
 	addMeasured(router, "/v2/members", jsonMembers)
 	addMeasured(router, "/v2/member/:addr", jsonMemberDetails)
 	addMeasured(router, "/v2/saver/:addr", jsonSaverDetails)
-	addMeasured(router, "/v2/runepool/:addr", jsonRUNEPoolProviderDetails)
 	addMeasured(router, "/v2/pools", jsonPools)
 	addMeasured(router, "/v2/knownpools", jsonKnownPools)
 	addMeasured(router, "/v2/pool/:pool", jsonPool)
